# Linear-Algebra-Library

./: .gitignore  CMakeLists.txt
docs/: matrix.md
include/: matrix.hpp
include/linalg/: matrix.hpp  sparse.hpp  vector.hpp
src/: CMakeLists.txt  main.cpp  matrix  matrix.cpp  matrix.hpp  sparse.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_sparse.cpp  testlib.cpp
